--- a/src/modulo-05-dotNet/Projects/StreetFigther.Web/StreetFigther.Web/StreetFighter.Web.csproj
+++ b/src/modulo-05-dotNet/Projects/StreetFigther.Web/StreetFigther.Web/StreetFighter.Web.csproj
@@ -129,7 +129,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\PrimeiraAparicao.cs" />
+    <Compile Include="Models\FichaTecnicaModel.cs" />
+    <Compile Include="Models\SobreModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
