feat(Cadastro): implementar View e Model para Cadastro. Alterar o link do Menu de Notícia para Cadastro.

--- a/src/modulo-05-dotNet/StreetFighter.Web/StreetFighter.Web/StreetFighter.Web.csproj
+++ b/src/modulo-05-dotNet/StreetFighter.Web/StreetFighter.Web/StreetFighter.Web.csproj
@@ -114,6 +114,8 @@
     <Content Include="Views\StreetFighter\Index.cshtml" />
     <Content Include="Views\StreetFighter\Sobre.cshtml" />
     <Content Include="Views\StreetFighter\FichaTecnica.cshtml" />
+    <Content Include="Views\_ViewStart.cshtml" />
+    <Content Include="Views\StreetFighter\Cadastro.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
