feat(StreetFigther): Exemplos camadas em aula.

--- a/src/modulo-05-dotNet/StreetFighter.Web/StreetFighter.Web/StreetFighter.Web.csproj
+++ b/src/modulo-05-dotNet/StreetFighter.Web/StreetFighter.Web/StreetFighter.Web.csproj
@@ -142,6 +142,7 @@
     <Content Include="Views\StreetFighter\Cadastro.cshtml" />
     <Content Include="Scripts\jquery-1.9.1.min.map" />
     <Content Include="Views\StreetFighter\Detalhe.cshtml" />
+    <Content Include="Views\StreetFighter\Listagem.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
