feat(StreetFighter): referenciar camadas entre si.

--- a/src/modulo-05-dotNet/StreetFighter.Web/StreetFighter.Web/Web.config
+++ b/src/modulo-05-dotNet/StreetFighter.Web/StreetFighter.Web/Web.config
@@ -41,13 +41,13 @@
     </compilers>
   </system.codedom>
     
-  <connectionStrings> 
-    <add name="StreetFighter" connectionString="Server=DESKTOP-NB-002677\SQLEXPRESS;Database=aula_ef_2;Trusted_Connection=True;" providerName="System.Data.SqlClient" /> 
-
- 
   
-    </connectionStrings>
+  <connectionStrings> 
+    <add name="StreetFighter" connectionString="Server=DESKTOP-NB-002677\SQLEXPRESS;Database=aula_ef;User Id = sa; Password = sa12345;" providerName="System.Data.SqlClient" /> 
+  </connectionStrings>
         
+  
+    
       <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
