--- a/src/modulo-05-dotNet/Aula9/Loja/Loja.Dominio/Loja.Dominio.csproj
+++ b/src/modulo-05-dotNet/Aula9/Loja/Loja.Dominio/Loja.Dominio.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C3FC5749-91FA-4F52-9247-BE67C97FB8CC}</ProjectGuid>
+    <ProjectGuid>{49C43E5C-2482-4BDE-BC77-19665BE8A676}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>StreetFighter.Repositorio</RootNamespace>
-    <AssemblyName>StreetFighter.Repositorio</AssemblyName>
+    <RootNamespace>Loja.Dominio</RootNamespace>
+    <AssemblyName>Loja.Dominio</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,14 +40,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="IProdutoRepositorio.cs" />
+    <Compile Include="IServicoDeCriptografia.cs" />
+    <Compile Include="Produto.cs" />
+    <Compile Include="ProdutoServico.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\StreetFighter.Dominio\StreetFighter.Dominio.csproj">
-      <Project>{cafa810b-5134-482b-b7a3-f17086ce3532}</Project>
-      <Name>StreetFighter.Dominio</Name>
-    </ProjectReference>
+    <Compile Include="Usuario.cs" />
+    <Compile Include="IUsuarioRepositorio.cs" />
+    <Compile Include="UsuarioServico.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
