--- a/src/modulo-05-dotNet/Aula9/Loja/Loja.Infraestrutura/Loja.Infraestrutura.csproj
+++ b/src/modulo-05-dotNet/Aula9/Loja/Loja.Infraestrutura/Loja.Infraestrutura.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C3FC5749-91FA-4F52-9247-BE67C97FB8CC}</ProjectGuid>
+    <ProjectGuid>{D68D234B-EF6D-4179-8283-43EF9EBC96AC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>StreetFighter.Repositorio</RootNamespace>
-    <AssemblyName>StreetFighter.Repositorio</AssemblyName>
+    <RootNamespace>Loja.Infraestrutura</RootNamespace>
+    <AssemblyName>Loja.Infraestrutura</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,13 +40,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServicoDeCriptografia.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\StreetFighter.Dominio\StreetFighter.Dominio.csproj">
-      <Project>{cafa810b-5134-482b-b7a3-f17086ce3532}</Project>
-      <Name>StreetFighter.Dominio</Name>
+    <ProjectReference Include="..\Loja.Dominio\Loja.Dominio.csproj">
+      <Project>{49c43e5c-2482-4bde-bc77-19665be8a676}</Project>
+      <Name>Loja.Dominio</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
