--- a/src/modulo-05-dotNet/StreetFighter.Web/StreetFighter.Aplicativo/StreetFighter.Aplicativo.csproj
+++ b/src/modulo-05-dotNet/StreetFighter.Web/StreetFighter.Aplicativo/StreetFighter.Aplicativo.csproj
@@ -44,6 +44,20 @@
     <Compile Include="PersonagemAplicativo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\StreetFighter.Dominio\StreetFighter.Dominio.csproj">
+      <Project>{cafa810b-5134-482b-b7a3-f17086ce3532}</Project>
+      <Name>StreetFighter.Dominio</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\StreetFighter.Repositoio_EF\StreetFighter.Repositoio_EF.csproj">
+      <Project>{68ed910d-186a-4238-b5e3-c9c6976837bd}</Project>
+      <Name>StreetFighter.Repositoio_EF</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\StreetFighter.Repositorio\StreetFighter.Repositorio.csproj">
+      <Project>{c3fc5749-91fa-4f52-9247-be67c97fb8cc}</Project>
+      <Name>StreetFighter.Repositorio</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
