--- a/src/modulo-05-dotNet/Aula9/Loja/Loja.Web/Loja.Web.csproj
+++ b/src/modulo-05-dotNet/Aula9/Loja/Loja.Web/Loja.Web.csproj
@@ -209,6 +209,7 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Login\Index.cshtml" />
+    <Content Include="Views\Produto\Cadastro.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
