--- a/src/modulo-06-ajax/Marvelflix/Marvelflix/Web.config
+++ b/src/modulo-06-ajax/Marvelflix/Marvelflix/Web.config
@@ -9,7 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="Marvelflix" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Marvelflix-20161105095156.mdf;Initial Catalog=aspnet-Marvelflix-20161105095156;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="Marvelflix" connectionString="Server=NB-002677\SQLEXPRESS;Database=Marvelflix;UId=sa;password=sa12345;" providerName="System.Data.SqlClient" />
+    
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
