chore(Loja.Testes) : incluir ProdutoRepositorioMock.

--- a/src/modulo-05-dotNet/Aula9/Loja/Loja.Tests/Loja.Tests.csproj
+++ b/src/modulo-05-dotNet/Aula9/Loja/Loja.Tests/Loja.Tests.csproj
@@ -50,6 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Mocks\ProdutoRepositorioMock.cs" />
     <Compile Include="Mocks\ServicoDeCriptografiaMock.cs" />
     <Compile Include="Mocks\UsuarioRepositorioMock.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
