--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,5 @@ bld/
 [Tt]est[Rr]esult*/
 [Bb]uild[Ll]og.*
 /src/modulo-09-java-anna/aula1/target/
+/src/modulo-09-java-anna/aula2/target/
+/src/modulo-09-java-anna/aula1/exercicios1/target/
