feat(aula3): exemplos/exercicios aula 3.

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,4 @@ bld/
 /src/modulo-09-java-anna/aula1/target/
 /src/modulo-09-java-anna/aula2/target/
 /src/modulo-09-java-anna/aula1/exercicios1/target/
+/src/modulo-09-java-anna/aula3/target/
