--- a/src/modulo-09-java-anna/exercicioAula5/pom.xml
+++ b/src/modulo-09-java-anna/exercicioAula5/pom.xml
@@ -3,17 +3,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>br.com.cwi.crescer</groupId>
-    <artifactId>aula5</artifactId>
+    <artifactId>exercicioAula5</artifactId>
     <version>1.0.0.0</version>
     <packaging>war</packaging>
 
-    <name>aula5</name>
+    <name>exercicioAula5</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
     <dependencies>
@@ -32,6 +30,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.2</version>
                 <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
                     <compilerArguments>
                         <endorseddirs>${endorsed.dir}</endorseddirs>
                     </compilerArguments>
