feat(aula8): exemplos de aula - Spring.

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,5 @@ bld/
 /src/modulo-09-java-anna/aula5/target/
 /src/modulo-09-java-anna/exercicioAula5/target/
 /src/modulo-09-java-anna/aula8/target/
+/src/modulo-09-java-anna/aula5-filme/target/
+/src/modulo-09-java/aula8/target/
