--- a/src/modulo-09-java-anna/aula8/pom.xml
+++ b/src/modulo-09-java-anna/aula8/pom.xml
@@ -42,6 +42,19 @@
         </dependency>
     </dependencies>
     
+    <repositories> 
+        <repository>
+            <id>codelds</id>
+            <url>https://code.lds.org/nexus/content/groups/main-repo</url>
+        </repository>
+    </repositories>
+    
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+    
     <build>
         <plugins>
             <plugin>
@@ -50,11 +63,6 @@
             </plugin>
         </plugins>
     </build>
-
     
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-    </properties>
+    
 </project>
