--- a/src/modulo-09-java-anna/aula8/src/main/resources/application.properties
+++ b/src/modulo-09-java-anna/aula8/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # defini\u00e7\u00f5es do servidor
-server.port=8080
+server.port=9090
 # spring debug out
 #debug=true
 # defini\u00e7\u00f5es do datasource
@@ -9,8 +9,9 @@ spring.datasource.username=crescer
 spring.datasource.password=crescer
 # defini\u00e7\u00f5es do hibernate
 #spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.show_sql=true
 spring.jpa.hibernate.format_sql=true
 # JSON format
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
-spring.jackson.time-zone=America/Sao_Pauloo 
+spring.jackson.time-zone=America/Sao_Paulo
